Внесены правки в проект

--- a/catalog.html
+++ b/catalog.html
@@ -185,7 +185,7 @@
             <div class="button-link detail">
               <a class="hotel-card-about" href="#">подробнее</a>
             </div>
-            <button class="hotel-card-favorites">в избранное</button>
+            <button class="button-favorite">в избранное</button>
             <span class="hotel-rating-stars visually-hidden">Рейтинг в звездах - 4 звезды</span>
             <p class="hotel-card-rating">Рейтинг: 8,5</p>
           </li>
@@ -201,7 +201,7 @@
             <div class="button-link detail">
               <a class="hotel-card-about" href="#">подробнее</a>
             </div>
-            <button class="hotel-card-favorites add">в избранном</button>
+            <button class="button-favorite add">в избранном</button>
             <span class="hotel-rating-stars visually-hidden">Рейтинг в звездах - 4 звезды</span>
             <p class="hotel-card-rating">Рейтинг: 9,2</p>
           </li>
@@ -217,7 +217,7 @@
             <div class="button-link detail">
               <a class="hotel-card-about" href="#">подробнее</a>
             </div>
-            <button class="hotel-card-favorites">в избранное</button>
+            <button class="button-favorite">в избранное</button>
             <span class="hotel-rating-stars visually-hidden">Рейтинг в звездах - 3 звезды</span>
             <p class="hotel-card-rating">Рейтинг: 6,9</p>
           </li>
@@ -233,7 +233,7 @@
             <div class="button-link detail">
               <a class="hotel-card-about" href="#">подробнее</a>
             </div>
-            <button class="hotel-card-favorites">в избранное</button>
+            <button class="button-favorite">в избранное</button>
             <span class="hotel-rating-stars visually-hidden">Рейтинг в звездах - 2 звезды</span>
             <p class="hotel-card-rating">Рейтинг: 5,0</p>
           </li>
