Исправления css кода

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <form action="https://echo.htmlacademy.ru/" method="get">
           <label for="subscription-form-email" class="visually-hidden">Введите Ваш e-mail</label>
           <input type="email" name="subscription-form" id="subscription-form-email" placeholder="Ваш e-mail">
-          <button class="subscribe" type="submit">Подписаться</button>
+          <button class="button subscribe" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
