--- a/catalog.html
+++ b/catalog.html
@@ -308,8 +308,9 @@
       </a>
       <div class="html-academy-logo">
         <a href="#">
-          <img src="/images/HTML Academy logo.svg" width="114.9" height="32.9" alt="Логотип HTML Academy">
+          <img src="/images/html-academy-logo.svg" width="115" height="33" alt="Логотип HTML Academy">
         </a>
       </div>
     </footer>
   </body>
+</html>
