--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </section>
 
       <!--ФОРМА ПОДПИСКИ-->
-      <section class="subscription-form">
+      <section class="subscription-form subscription-index">
         <h2>Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
         <form action="https://echo.htmlacademy.ru/" method="get">
@@ -160,7 +160,7 @@
       </a>
       <div class="html-academy-logo">
         <a href="#">
-          <img src="/images/HTML Academy logo.svg" width="114.9" height="32.9" alt="Логотип HTML Academy">
+          <img src="/images/html-academy-logo.svg" width="115" height="33" alt="Логотип HTML Academy">
         </a>
       </div>
     </footer>
