Поправил хлебные крошки

--- a/catalog.html
+++ b/catalog.html
@@ -64,12 +64,12 @@
           <!--ХЛЕБНЫЕ КРОШКИ-->
           <ol class="breadcrumps">
             <li class="braedcrumps-item">
-              <a class="breadcrumps-limk" href="index.html">
+              <a class="breadcrumps-link" href="index.html">
                 <span class="visually-hidden">Главная</span>
               </a>
             </li>
             <li class="braedcrumps-item">
-              <a class="breadcrumps-limk">Гостиницы</a>
+              <a class="breadcrumps-link">Гостиницы</a>
             </li>
           </ol>
         </header>
