--- a/catalog.html
+++ b/catalog.html
@@ -45,9 +45,7 @@
             </a>
           </li>
           <li class="user-item">
-            <div class="button-link here">
-              <a class="user-link" href="#">Хочу сюда!</a>
-            </div>
+            <a class="button-link here" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -59,7 +57,7 @@
       <!--ШАПКА ОСНОВНОГО СОДЕРЖАНИЯ-->
       <div class="head-inner-container">
         <header class="main-inner-header">
-          <h1 class="inner-header-title">Гостиницы Седоны</h1>
+          <h1 class="heading header-big">Гостиницы Седоны</h1>
 
           <!--ХЛЕБНЫЕ КРОШКИ-->
           <ol class="breadcrumps">
@@ -79,7 +77,7 @@
           <h2 class="visually-hidden">Фильтрация каталога гостиниц</h2>
           <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
             <fieldset class="catalog-filter-group">
-              <legend class="catalog-filter-titel">Инфраструктура:</legend>
+              <legend class="catalog-filter-title">Инфраструктура:</legend>
               <ul class="catalog-filter-list">
                 <li class="catalog-filter-item">
                   <label class="control">
@@ -102,7 +100,7 @@
               </ul>
             </fieldset>
             <fieldset class="catalog-filter-group">
-              <legend class="catalog-filter-titel">Тип жилья:</legend>
+              <legend class="catalog-filter-title">Тип жилья:</legend>
               <ul class="catalog-filter-list">
                 <li class="catalog-filter-item">
                   <label class="control">
@@ -135,8 +133,8 @@
               <span class="slider-price-to visually-hidden">Cтоимость до</span>
               </p>
             </fieldset>
-            <button class="button-submit" type="submit">Применить</button>
-            <button class="button-reset" type="reset">Сбросить</button>
+            <button class="button submit" type="submit">Применить</button>
+            <button class="button reset" type="reset">Сбросить</button>
           </form>
         </section>
       </div>
@@ -175,65 +173,57 @@
         <ul class="hotel-list">
           <li class="hotel-card">
             <a class="hotel-card-link">
-              <h3 class="hotel-card-title">Amara Resort & Spa</h3>
+              <h3 class="heading header-small">Amara Resort & Spa</h3>
               <img class="hotel-card-image" src="images/catalog/amara-resort-spa.jpeg" width="300" height="211" alt="Гостиница Amara Resort & Spa">
             </a>
             <dl class="hotel-card-type-price">
               <dt class="hotel-type">Гостиница</dt>
               <dd class="hotel-price">От 4000 ₽</dd>
             </dl>
-            <div class="button-link detail">
-              <a class="hotel-card-about" href="#">подробнее</a>
-            </div>
-            <button class="button-favorite">в избранное</button>
+            <a class="button-link hotel-card-detail" href="#">подробнее</a>
+            <button class="button favorite">в избранное</button>
             <span class="hotel-rating-stars visually-hidden">Рейтинг в звездах - 4 звезды</span>
             <p class="hotel-card-rating">Рейтинг: 8,5</p>
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link">
-              <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
+              <h3 class="heading header-small">Villas at Poco Diablo</h3>
               <img class="hotel-card-image" src="images/catalog/villas-at-poco-diablo.jpeg" width="300" height="211" alt="Гостиница Villas at Poco Diablo">
             </a>
             <dl class="hotel-card-type-price">
               <dt class="hotel-type">Гостиница</dt>
               <dd class="hotel-price">От 5000 ₽</dd>
             </dl>
-            <div class="button-link detail">
-              <a class="hotel-card-about" href="#">подробнее</a>
-            </div>
-            <button class="button-favorite add">в избранном</button>
+            <a class="button-link hotel-card-detail" href="#">подробнее</a>
+            <button class="button favorite add">в избранном</button>
             <span class="hotel-rating-stars visually-hidden">Рейтинг в звездах - 4 звезды</span>
             <p class="hotel-card-rating">Рейтинг: 9,2</p>
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link">
-              <h3 class="hotel-card-title">Desert Quail Inn</h3>
+              <h3 class="heading header-small">Desert Quail Inn</h3>
               <img class="hotel-card-image" src="images/catalog/desert-quail-inn.jpeg" width="300" height="211" alt="Гостиница Desert Quail Inn">
             </a>
             <dl class="hotel-card-type-price">
               <dt class="hotel-type">Гостиница</dt>
               <dd class="hotel-price">От 2500 ₽</dd>
             </dl>
-            <div class="button-link detail">
-              <a class="hotel-card-about" href="#">подробнее</a>
-            </div>
-            <button class="button-favorite">в избранное</button>
+            <a class="button-link hotel-card-detail" href="#">подробнее</a>
+            <button class="button favorite">в избранное</button>
             <span class="hotel-rating-stars visually-hidden">Рейтинг в звездах - 3 звезды</span>
             <p class="hotel-card-rating">Рейтинг: 6,9</p>
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link">
-              <h3 class="hotel-card-title">GreenTree Inn</h3>
+              <h3 class="heading header-small">GreenTree Inn</h3>
               <img class="hotel-card-image" src="images/catalog/greentree-inn.jpeg" width="300" height="211" alt="Гостиница GreenTree Inn">
             </a>
             <dl class="hotel-card-type-price">
               <dt class="hotel-type">Гостиница</dt>
               <dd class="hotel-price">От 1500 ₽</dd>
             </dl>
-            <div class="button-link detail">
-              <a class="hotel-card-about" href="#">подробнее</a>
-            </div>
-            <button class="button-favorite">в избранное</button>
+            <a class="button-link hotel-card-detail" href="#">подробнее</a>
+            <button class="button favorite">в избранное</button>
             <span class="hotel-rating-stars visually-hidden">Рейтинг в звездах - 2 звезды</span>
             <p class="hotel-card-rating">Рейтинг: 5,0</p>
           </li>
@@ -264,7 +254,7 @@
         <!--ОТОБРАЖЕНИЕ КОЛИЧЕСТВА КАРТОЧЕК НА СТРАНИЦЕ-->
         <form class="control-amount">
           <label for="control-amount-card">Гостиниц на странице:</label>
-          <select id="control-amount-card" aria-label="Количество карточек на странице">
+          <select class="select-control-amount" id="control-amount-card" aria-label="Количество карточек на странице">
             <option value="4">4</option>
             <option value="8">8</option>
             <option value="16">16</option>
@@ -273,13 +263,13 @@
       </section>
 
       <!--ФОРМА ПОДПИСКИ-->
-      <section class="subscription-form">
-        <h2>Подпишитесь на рассылку</h2>
-        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form action="https://echo.htmlacademy.ru/" method="get">
+      <section class="subscription subscription-inner">
+        <h2 class="neading header-normal">Подпишитесь на рассылку</h2>
+        <p>Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
+        <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="get">
           <label for="subscription-form-email" class="visually-hidden">Введите Ваш e-mail</label>
-          <input type="email" name="subscription-form" id="subscription-form-email" placeholder="Ваш e-mail">
-          <button class="subscribe" type="submit">Подписаться</button>
+          <input class="subscription-input" type="email" name="subscription-form" id="subscription-form-email" placeholder="Ваш e-mail">
+          <button class="button subscribe" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
@@ -303,14 +293,10 @@
           </a>
         </li>
       </ul>
-      <a href="tel:88128121212">
-        <span class="phone">+7 (812) 812-12-12</span>
+      <a class="phone" href="tel:88128121212">+7 (812) 812-12-12</a>
+      <a class="html-academy-logo" href="#">
+        <img src="/images/html-academy-logo.svg" width="115" height="33" alt="Логотип HTML Academy">
       </a>
-      <div class="html-academy-logo">
-        <a href="#">
-          <img src="/images/html-academy-logo.svg" width="115" height="33" alt="Логотип HTML Academy">
-        </a>
-      </div>
     </footer>
   </body>
 </html>
