--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
             </a>
           </li>
           <li class="user-item">
-            <div class="button-link here">
-              <a class="user-link" href="#">Хочу сюда!</a>
-            </div>
+            <a class="button-link here" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -72,65 +70,63 @@
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
         <ol class="advantages-main-list">
           <li class="advantages-main-item blue-block">
-            <h3>Настоящий<br>городок</h3>
+            <h3 class="heading header-small">Настоящий<br>городок</h3>
             <p>— №1 —</p>
             <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             <img src="images/advantage-1.jpeg" width="800" height="384" alt="Улица в Седоне">
               <ul class="advantages-sub-list">
                 <li class="advantages-sub-item white-blue-block">
-                  <h4>Жильё</h4>
+                  <h4 class="heading header-small">Жильё</h4>
                   <p>Рекомендуем пожить<br>в настоящем мотеле, всё как в кино!</p>
                 </li>
                 <li class="advantages-sub-item">
-                  <h4>Еда</h4>
+                  <h4 class="heading header-small">Еда</h4>
                   <p>Всегда заказывайте<br>топовый фирменный бургер, вы не разочаруетесь!</p>
                 </li>
                 <li class="advantages-sub-item white-blue-block">
-                  <h4>Сувениры</h4>
+                  <h4 class="heading header-small">Сувениры</h4>
                   <p>Не только китайского,<br>но и настоящего местного производства!</p>
                 </li>
               </ul>
           </li>
           <li class="advantages-main-item blue-block">
-            <h3>Там есть <br>мост дьявола</h3>
+            <h3 class="heading header-small">Там есть <br>мост дьявола</h3>
             <p>— №2 —</p>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             <img src="images/advantage-2.jpeg" width="800" height="384" alt="Каньон в Седоне">
           </li>
           <li class="advantages-main-item white-blue-block">
-            <h3>Небольшая<br>площадь</h3>
+            <h3 class="heading header-small">Небольшая<br>площадь</h3>
             <p>— №3 —</p>
             <p>Все достопримечательности находятся очень близко</p>
           </li>
           <li class="advantages-main-item grey-blue-block">
-            <h3>Красивая<br>дорога</h3>
+            <h3 class="heading header-small">Красивая<br>дорога</h3>
             <p>— №4 —</p>
             <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="advantages-main-item white-blue-block">
-            <h3>Мало<br>туристов</h3>
+            <h3 class="heading header-small">Мало<br>туристов</h3>
             <p>— №5 —</p>
             <p>Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ol>
       </section>
 
-      <!--ПОИСК ГОСТИНИЦ-->
+      <!--ПОИСК ГОСТИНИЦЫ-->
       <section class="hotel-search">
-        <h2>Заинтересовались?</h2>
+        <h2 class="heading header-normal">Заинтересовались?</h2>
         <p>Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <div class="button-link search">
-          <a href="catalog.html">Поиск гостиницы в Седоне</a>
-        </div>
+        <a class="button-link search" href="catalog.html">Поиск гостиницы в Седоне</a>
       </section>
 
       <!--ФОРМА ПОДПИСКИ-->
-      <section class="subscription-form subscription-index">
-        <h2>Подпишитесь на рассылку</h2>
+      <section class="subscription subscription-index">
+        <h2 class="heading header-normal">Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
-        <form action="https://echo.htmlacademy.ru/" method="get">
+        <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="get">
           <label for="subscription-form-email" class="visually-hidden">Введите Ваш e-mail</label>
-          <input type="email" name="subscription-form" id="subscription-form-email" placeholder="Ваш e-mail">
+          <input class="subscription-input" type="email" name="subscription-form" id="subscription-form-email" placeholder="Ваш e-mail">
           <button class="button subscribe" type="submit">Подписаться</button>
         </form>
       </section>
@@ -155,14 +151,10 @@
           </a>
         </li>
       </ul>
-      <a href="tel:88128121212">
-        <span class="phone">+7 (812) 812-12-12</span>
+      <a class="phone" href="tel:88128121212">+7 (812) 812-12-12</a>
+      <a class="html-academy-logo" href="#">
+        <img src="/images/html-academy-logo.svg" width="115" height="33" alt="Логотип HTML Academy">
       </a>
-      <div class="html-academy-logo">
-        <a href="#">
-          <img src="/images/html-academy-logo.svg" width="115" height="33" alt="Логотип HTML Academy">
-        </a>
-      </div>
     </footer>
   </body>
 </html>
