Изменено изображение в промо блоке, правки стилей

--- a/catalog.html
+++ b/catalog.html
@@ -251,9 +251,9 @@
           </li>
         </ul>
 
-        <!--ОТОБРАЖЕНИЕ КОЛИЧЕСТВА КАРТОЧЕК НА СТРАНИЦЕ-->
+        <!--КОЛИЧЕСТВО КАРТОЧЕК НА СТРАНИЦЕ КАТАЛОГА-->
         <form class="control-amount">
-          <label for="control-amount-card">Гостиниц на странице:</label>
+          <label class="label-amount" for="control-amount-card">Гостиниц на странице:</label>
           <select class="select-control-amount" id="control-amount-card" aria-label="Количество карточек на странице">
             <option value="4">4</option>
             <option value="8">8</option>
