--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
       <!--ПРОМО-->
       <section class="promo">
         <h2 class="visually-hidden">О городе Седона</h2>
-        <img src="images/promo.jpg" width="1200" height="485" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
+        <div class="promo-image">
+          <img src="/images/welcome.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
+        </div>
         <p>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
       </section>
 
