Сделаны сетки страниц на флексах

--- a/index.html
+++ b/index.html
@@ -52,111 +52,136 @@
     </header>
 
     <!--ОСНОВНОЕ СОДЕРЖАНИЕ-->
-    <main class="main-index">
+    <main class="main-index main-container">
+      <div class="page-container">
 
-      <!--ГЛАВНЫЙ ЗАГОЛОВОК-->
-      <h1 class="visually-hidden">Добро пожаловать в великолепную Седону</h1>
+        <!--ГЛАВНЫЙ ЗАГОЛОВОК-->
+        <h1 class="visually-hidden">Добро пожаловать в великолепную Седону</h1>
 
-      <!--ПРОМО-->
-      <section class="promo">
-        <h2 class="visually-hidden">О городе Седона</h2>
-        <div class="promo-image">
-          <img src="/images/welcome.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
-        </div>
-        <p>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
-      </section>
+        <!--ПРОМО-->
+        <section class="promo">
+          <h2 class="visually-hidden">О городе Седона</h2>
+          <div class="promo-image">
+            <img src="/images/welcome.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
+          </div>
+          <p>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
+        </section>
 
-      <!--ПРЕИМУЩЕСТВА-->
-      <section class="advantages">
-        <h2 class="visually-hidden">Преимущества города Седона</h2>
-        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
-        <ol class="advantages-main-list">
-          <li class="advantages-main-item blue-block">
-            <h3 class="heading header-small">Настоящий<br>городок</h3>
-            <p>— №1 —</p>
-            <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img src="images/advantage-1.jpeg" width="800" height="384" alt="Улица в Седоне">
-              <ul class="advantages-sub-list">
-                <li class="advantages-sub-item white-blue-block">
-                  <h4 class="heading header-small">Жильё</h4>
-                  <p>Рекомендуем пожить<br>в настоящем мотеле, всё как в кино!</p>
-                </li>
-                <li class="advantages-sub-item">
-                  <h4 class="heading header-small">Еда</h4>
-                  <p>Всегда заказывайте<br>топовый фирменный бургер, вы не разочаруетесь!</p>
-                </li>
-                <li class="advantages-sub-item white-blue-block">
-                  <h4 class="heading header-small">Сувениры</h4>
-                  <p>Не только китайского,<br>но и настоящего местного производства!</p>
-                </li>
-              </ul>
-          </li>
-          <li class="advantages-main-item blue-block">
-            <h3 class="heading header-small">Там есть <br>мост дьявола</h3>
-            <p>— №2 —</p>
-            <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            <img src="images/advantage-2.jpeg" width="800" height="384" alt="Каньон в Седоне">
-          </li>
-          <li class="advantages-main-item white-blue-block">
-            <h3 class="heading header-small">Небольшая<br>площадь</h3>
-            <p>— №3 —</p>
-            <p>Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="advantages-main-item grey-blue-block">
-            <h3 class="heading header-small">Красивая<br>дорога</h3>
-            <p>— №4 —</p>
-            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="advantages-main-item white-blue-block">
-            <h3 class="heading header-small">Мало<br>туристов</h3>
-            <p>— №5 —</p>
-            <p>Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
-        </ol>
-      </section>
+        <!--ПРЕИМУЩЕСТВА-->
+        <section class="advantages">
+          <h2 class="visually-hidden">Преимущества города Седона</h2>
+          <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+          <ol class="advantages-main-list">
+            <li class="advantages-main-item blue-block">
+              <div class="blue-block-main">
+                <div class="blue-block-text-start">
+                  <h3 class="heading header-small">Настоящий<br>городок</h3>
+                  <p>— №1 —</p>
+                  <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+                </div>
+                <div class="blue-block-image-end">
+                  <img src="images/advantage-1.jpeg" width="800" height="384" alt="Улица в Седоне">
+                </div>
+              </div>
+              <div class="blue-block-sub">
+                <ul class="advantages-sub-list">
+                  <li class="advantages-sub-item white-blue-block">
+                    <h4 class="heading header-small">Жильё</h4>
+                    <p>Рекомендуем пожить<br>в настоящем мотеле, всё как в кино!</p>
+                  </li>
+                  <li class="advantages-sub-item">
+                    <h4 class="heading header-small">Еда</h4>
+                    <p>Всегда заказывайте<br>топовый фирменный бургер, вы не разочаруетесь!</p>
+                  </li>
+                  <li class="advantages-sub-item white-blue-block">
+                    <h4 class="heading header-small">Сувениры</h4>
+                    <p>Не только китайского,<br>но и настоящего местного производства!</p>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="advantages-main-item blue-block">
+              <div class="blue-block-main">
+                <div class="blue-block-text-end">
+                  <h3 class="heading header-small">Там есть <br>мост дьявола</h3>
+                  <p>— №2 —</p>
+                  <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+                </div>
+                <div class="blue-block-image-start">
+                  <img src="images/advantage-2.jpeg" width="800" height="384" alt="Каньон в Седоне">
+                </div>
+              </div>
+            </li>
+            <li class="advantages-main-item white-blue-block">
+              <h3 class="heading header-small">Небольшая<br>площадь</h3>
+              <p>— №3 —</p>
+              <p>Все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="advantages-main-item grey-blue-block">
+              <h3 class="heading header-small">Красивая<br>дорога</h3>
+              <p>— №4 —</p>
+              <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li class="advantages-main-item white-blue-block">
+              <h3 class="heading header-small">Мало<br>туристов</h3>
+              <p>— №5 —</p>
+              <p>Большинство едет в Гранд Каньон и толпится там</p>
+            </li>
+          </ol>
+        </section>
 
-      <!--ПОИСК ГОСТИНИЦЫ-->
-      <section class="hotel-search">
-        <h2 class="heading header-normal">Заинтересовались?</h2>
-        <p>Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="button-link search" href="catalog.html">Поиск гостиницы в Седоне</a>
-      </section>
+        <!--ПОИСК ГОСТИНИЦЫ-->
+        <section class="hotel-search">
+          <h2 class="heading header-normal">Заинтересовались?</h2>
+          <p>Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <a class="button-link search" href="catalog.html">Поиск гостиницы в Седоне</a>
+        </section>
 
-      <!--ФОРМА ПОДПИСКИ-->
-      <section class="subscription subscription-index">
-        <h2 class="heading header-normal">Подпишитесь на рассылку</h2>
-        <p>Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
-        <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="get">
-          <label for="subscription-form-email" class="visually-hidden">Введите Ваш e-mail</label>
-          <input class="subscription-input" type="email" name="subscription-form" id="subscription-form-email" placeholder="Ваш e-mail">
-          <button class="button subscribe" type="submit">Подписаться</button>
-        </form>
-      </section>
+        <!--ФОРМА ПОДПИСКИ-->
+        <section class="subscription subscription-index">
+          <h2 class="heading header-normal">Подпишитесь на рассылку</h2>
+          <p>Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
+          <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="get">
+            <label for="subscription-form-email" class="visually-hidden">Введите Ваш e-mail</label>
+            <input class="subscription-input" type="email" name="subscription-form" id="subscription-form-email" placeholder="Ваш e-mail">
+            <button class="button subscribe" type="submit">Подписаться</button>
+          </form>
+        </section>
+      </div>
     </main>
 
     <!--ПОДВАЛ-->
     <footer class="page-footer">
-      <ul class="social-list">
-        <li class="social-item">
-          <a href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">Вконтакте</span>
+      <div class="page-footer-container">
+        <section class="footer-social">
+          <h2 class="visually-hidden">Список социальных сетей</h2>
+          <ul class="social-list">
+            <li class="social-item">
+              <a href="https://vk.com/htmlacademy">
+                <span class="visually-hidden">Вконтакте</span>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="https://t.me/htmlacademy">
+                <span class="visually-hidden">Telegram</span>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="https://www.youtube.com/user/htmlacademyru">
+                <span class="visually-hidden">YouTube</span>
+              </a>
+            </li>
+          </ul>
+        </section>
+        <div class="footer-phone">
+          <a class="phone" href="tel:88128121212">+7 (812) 812-12-12</a>
+        </div>
+        <div class="footer-htmlacademy-logo">
+          <a class="htmlacademy-logo" href="#">
+            <img src="/images/html-academy-logo.svg" width="115" height="33" alt="Логотип HTML Academy">
           </a>
-        </li>
-        <li class="social-item">
-          <a href="https://t.me/htmlacademy">
-            <span class="visually-hidden">Telegram</span>
-          </a>
-        </li>
-        <li class="social-item">
-          <a href="https://www.youtube.com/user/htmlacademyru">
-            <span class="visually-hidden">YouTube</span>
-          </a>
-        </li>
-      </ul>
-      <a class="phone" href="tel:88128121212">+7 (812) 812-12-12</a>
-      <a class="html-academy-logo" href="#">
-        <img src="/images/html-academy-logo.svg" width="115" height="33" alt="Логотип HTML Academy">
-      </a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
