Поправлены несколько дивов, работа с микросеткой

--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
         <!--ПРОМО-->
         <section class="promo">
           <h2 class="visually-hidden">О городе Седона</h2>
-          <div class="promo-image">
-            <img src="/images/welcome.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
+          <div class="promo-image-container">
+            <img class="promo-image" src="/images/welcome.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
           </div>
-          <p>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
+          <p class="promo-text">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
         </section>
 
         <!--ПРЕИМУЩЕСТВА-->
         <section class="advantages">
           <h2 class="visually-hidden">Преимущества города Седона</h2>
-          <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+          <p class="advantages-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
           <ol class="advantages-main-list">
             <li class="advantages-main-item blue-block">
               <div class="blue-block-main">
@@ -81,9 +81,7 @@
                   <p>— №1 —</p>
                   <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
                 </div>
-                <div class="blue-block-image-end">
-                  <img src="images/advantage-1.jpeg" width="800" height="384" alt="Улица в Седоне">
-                </div>
+                <img class="blue-block-image-end" src="images/advantage-1.jpeg" width="800" height="384" alt="Улица в Седоне">
               </div>
               <div class="blue-block-sub">
                 <ul class="advantages-sub-list">
@@ -109,9 +107,7 @@
                   <p>— №2 —</p>
                   <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
                 </div>
-                <div class="blue-block-image-start">
-                  <img src="images/advantage-2.jpeg" width="800" height="384" alt="Каньон в Седоне">
-                </div>
+                <img class="blue-block-image-start" src="images/advantage-2.jpeg" width="800" height="384" alt="Каньон в Седоне">
               </div>
             </li>
             <li class="advantages-main-item white-blue-block">
