--- a/index.html
+++ b/index.html
@@ -76,54 +76,52 @@
           <ol class="advantages-main-list">
             <li class="advantages-main-item blue-block">
               <div class="blue-block-main">
-                <div class="blue-block-text-start">
+                <div class="blue-block-text">
                   <h3 class="heading header-small">Настоящий<br>городок</h3>
-                  <p>— №1 —</p>
-                  <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+                  <p class="advantages-number">— №1 —</p>
+                  <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
                 </div>
                 <img class="blue-block-image-end" src="images/advantage-1.jpeg" width="800" height="384" alt="Улица в Седоне">
               </div>
-              <div class="blue-block-sub">
-                <ul class="advantages-sub-list">
-                  <li class="advantages-sub-item white-blue-block">
-                    <h4 class="heading header-small">Жильё</h4>
-                    <p>Рекомендуем пожить<br>в настоящем мотеле, всё как в кино!</p>
-                  </li>
-                  <li class="advantages-sub-item">
-                    <h4 class="heading header-small">Еда</h4>
-                    <p>Всегда заказывайте<br>топовый фирменный бургер, вы не разочаруетесь!</p>
-                  </li>
-                  <li class="advantages-sub-item white-blue-block">
-                    <h4 class="heading header-small">Сувениры</h4>
-                    <p>Не только китайского,<br>но и настоящего местного производства!</p>
-                  </li>
-                </ul>
-              </div>
+              <ul class="blue-block-sub advantages-sub-list">
+                <li class="advantages-sub-item white-blue-block">
+                  <h4 class="heading header-small">Жильё</h4>
+                  <p class="advantages-description">Рекомендуем пожить<br>в настоящем мотеле,<br>всё как в кино!</p>
+                </li>
+                <li class="advantages-sub-item">
+                  <h4 class="heading header-small">Еда</h4>
+                  <p class="advantages-description">Всегда заказывайте<br>топовый фирменный бургер, вы не разочаруетесь!</p>
+                </li>
+                <li class="advantages-sub-item white-blue-block">
+                  <h4 class="heading header-small">Сувениры</h4>
+                  <p class="advantages-description">Не только китайского,<br>но и настоящего местного производства!</p>
+                </li>
+              </ul>
             </li>
             <li class="advantages-main-item blue-block">
               <div class="blue-block-main">
-                <div class="blue-block-text-end">
+                <div class="blue-block-text">
                   <h3 class="heading header-small">Там есть <br>мост дьявола</h3>
-                  <p>— №2 —</p>
-                  <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+                  <p class="advantages-number">— №2 —</p>
+                  <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
                 </div>
                 <img class="blue-block-image-start" src="images/advantage-2.jpeg" width="800" height="384" alt="Каньон в Седоне">
               </div>
             </li>
             <li class="advantages-main-item white-blue-block">
               <h3 class="heading header-small">Небольшая<br>площадь</h3>
-              <p>— №3 —</p>
-              <p>Все достопримечательности находятся очень близко</p>
+              <p class="advantages-number">— №3 —</p>
+              <p class="advantages-description">Все достопримечательности находятся очень близко</p>
             </li>
             <li class="advantages-main-item grey-blue-block">
               <h3 class="heading header-small">Красивая<br>дорога</h3>
-              <p>— №4 —</p>
-              <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              <p class="advantages-number">— №4 —</p>
+              <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
             <li class="advantages-main-item white-blue-block">
               <h3 class="heading header-small">Мало<br>туристов</h3>
-              <p>— №5 —</p>
-              <p>Большинство едет в Гранд Каньон и толпится там</p>
+              <p class="advantages-number">— №5 —</p>
+              <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
           </ol>
         </section>
@@ -131,7 +129,7 @@
         <!--ПОИСК ГОСТИНИЦЫ-->
         <section class="hotel-search">
           <h2 class="heading header-normal">Заинтересовались?</h2>
-          <p>Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <p class="hotel-search-text">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <a class="button-link search" href="catalog.html">Поиск гостиницы в Седоне</a>
         </section>
 
