--- a/catalog.html
+++ b/catalog.html
@@ -153,9 +153,7 @@
         <!--СОРТИРОВКА-->
         <section class="hotel-sorting">
           <h2 class="visually-hidden">Сортировка каталога гостиниц</h2>
-          <div class="hotel-sorting-result">
-            <p class="search-result">Найдено гостиниц: 38</p>
-          </div>
+          <p class="search-result">Найдено гостиниц: 38</p>
           <select class="hotel-sorting-select" aria-label="Сортировка">
             <option value="cheap">Сначала дешёвые</option>
             <option value="expensive">Сначала дорогие</option>
@@ -297,17 +295,17 @@
           <h2 class="visually-hidden">Список социальных сетей</h2>
           <ul class="social-list">
             <li class="social-item">
-              <a href="https://vk.com/htmlacademy">
+              <a class="social-link" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Вконтакте</span>
               </a>
             </li>
             <li class="social-item">
-              <a href="https://t.me/htmlacademy">
+              <a class="social-link" href="https://t.me/htmlacademy">
                 <span class="visually-hidden">Telegram</span>
               </a>
             </li>
             <li class="social-item">
-              <a href="https://www.youtube.com/user/htmlacademyru">
+              <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">YouTube</span>
               </a>
             </li>
