--- a/index.html
+++ b/index.html
@@ -153,17 +153,17 @@
           <h2 class="visually-hidden">Список социальных сетей</h2>
           <ul class="social-list">
             <li class="social-item">
-              <a href="https://vk.com/htmlacademy">
+              <a class="social-link" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Вконтакте</span>
               </a>
             </li>
             <li class="social-item">
-              <a href="https://t.me/htmlacademy">
+              <a class="social-link" href="https://t.me/htmlacademy">
                 <span class="visually-hidden">Telegram</span>
               </a>
             </li>
             <li class="social-item">
-              <a href="https://www.youtube.com/user/htmlacademyru">
+              <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">YouTube</span>
               </a>
             </li>
