--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <li class="advantages-main-item blue-block">
             <div class="blue-block-main">
               <div class="blue-block-text">
-                <h3 class="heading header-small">Настоящий<br>городок</h3>
+                <h3 class="heading-small">Настоящий<br>городок</h3>
                 <p class="advantages-number">— №1 —</p>
                 <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
@@ -84,15 +84,15 @@
             </div>
             <ul class="blue-block-sub advantages-sub-list">
               <li class="advantages-sub-item white-blue-block">
-                <h4 class="heading header-small">Жильё</h4>
+                <h4 class="heading-small">Жильё</h4>
                 <p class="advantages-description">Рекомендуем пожить<br>в настоящем мотеле,<br>всё как в кино!</p>
               </li>
               <li class="advantages-sub-item">
-                <h4 class="heading header-small">Еда</h4>
+                <h4 class="heading-small">Еда</h4>
                 <p class="advantages-description">Всегда заказывайте<br>топовый фирменный бургер, вы не разочаруетесь!</p>
               </li>
               <li class="advantages-sub-item white-blue-block">
-                <h4 class="heading header-small">Сувениры</h4>
+                <h4 class="heading-small">Сувениры</h4>
                 <p class="advantages-description">Не только китайского,<br>но и настоящего местного производства!</p>
               </li>
             </ul>
@@ -100,7 +100,7 @@
           <li class="advantages-main-item blue-block">
             <div class="blue-block-main">
               <div class="blue-block-text">
-                <h3 class="heading header-small">Там есть <br>мост дьявола</h3>
+                <h3 class="heading-small">Там есть <br>мост дьявола</h3>
                 <p class="advantages-number">— №2 —</p>
                 <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
               </div>
@@ -108,17 +108,17 @@
             </div>
           </li>
           <li class="advantages-main-item white-blue-block">
-            <h3 class="heading header-small">Небольшая<br>площадь</h3>
+            <h3 class="heading-small">Небольшая<br>площадь</h3>
             <p class="advantages-number">— №3 —</p>
             <p class="advantages-description">Все достопримечательности находятся очень близко</p>
           </li>
           <li class="advantages-main-item grey-blue-block">
-            <h3 class="heading header-small">Красивая<br>дорога</h3>
+            <h3 class="heading-small">Красивая<br>дорога</h3>
             <p class="advantages-number">— №4 —</p>
             <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="advantages-main-item white-blue-block">
-            <h3 class="heading header-small">Мало<br>туристов</h3>
+            <h3 class="heading-small">Мало<br>туристов</h3>
             <p class="advantages-number">— №5 —</p>
             <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
@@ -127,15 +127,15 @@
 
       <!--ПОИСК ГОСТИНИЦЫ-->
       <section class="hotel-search">
-        <h2 class="heading header-normal">Заинтересовались?</h2>
+        <h2 class="hotel-search-title heading-normal">Заинтересовались?</h2>
         <p class="hotel-search-text">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class="button-link search" href="catalog.html">Поиск гостиницы в Седоне</a>
       </section>
 
       <!--ФОРМА ПОДПИСКИ-->
       <section class="subscription subscription-index">
-        <h2 class="heading header-normal">Подпишитесь на рассылку</h2>
-        <p>Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
+        <h2 class="subscription-title heading-normal">Подпишитесь на рассылку</h2>
+        <p class="subscription-description">Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
         <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="get">
           <label for="subscription-form-email" class="visually-hidden">Введите Ваш e-mail</label>
           <input class="subscription-input" type="email" name="subscription-form" id="subscription-form-email" placeholder="Ваш e-mail">
@@ -146,35 +146,30 @@
 
     <!--ПОДВАЛ-->
     <footer class="page-footer">
-      <div class="page-footer-container">
-        <section class="footer-social">
-          <h2 class="visually-hidden">Список социальных сетей</h2>
-          <ul class="social-list">
-            <li class="social-item">
-              <a class="social-link" href="https://vk.com/htmlacademy">
-                <span class="visually-hidden">Вконтакте</span>
-              </a>
-            </li>
-            <li class="social-item">
-              <a class="social-link" href="https://t.me/htmlacademy">
-                <span class="visually-hidden">Telegram</span>
-              </a>
-            </li>
-            <li class="social-item">
-              <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
-                <span class="visually-hidden">YouTube</span>
-              </a>
-            </li>
-          </ul>
-        </section>
-        <div class="footer-phone">
-          <a class="phone" href="tel:88128121212">+7 (812) 812-12-12</a>
-        </div>
-        <div class="footer-htmlacademy-logo">
-          <a class="htmlacademy-logo" href="#">
-            <img src="/images/html-academy-logo.svg" width="115" height="33" alt="Логотип HTML Academy">
+      <ul class="footer-social-list">
+        <li class="footer-social-item">
+          <a class="footer-social-link" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">Вконтакте</span>
           </a>
-        </div>
+        </li>
+        <li class="footer-social-item">
+          <a class="footer-social-link" href="https://t.me/htmlacademy">
+            <span class="visually-hidden">Telegram</span>
+          </a>
+        </li>
+        <li class="footer-social-item">
+          <a class="footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
+            <span class="visually-hidden">YouTube</span>
+          </a>
+        </li>
+      </ul>
+      <div class="footer-phone">
+        <a class="phone" href="tel:88128121212">+7 (812) 812-12-12</a>
+      </div>
+      <div class="footer-htmlacademy-logo">
+        <a class="htmlacademy-logo" href="#">
+          <img src="/images/html-academy-logo.svg" width="115" height="33" alt="Логотип HTML Academy">
+        </a>
       </div>
     </footer>
   </body>
