--- a/catalog.html
+++ b/catalog.html
@@ -184,65 +184,57 @@
           <ul class="hotel-list">
             <li class="hotel-card">
               <div class="hotel-card-content">
-                <a class="hotel-card-link">
-                  <h3 class="heading-small">Amara Resort & Spa</h3>
-                  <img class="hotel-card-image" src="images/catalog/amara-resort-spa.jpeg" width="300" height="211" alt="Гостиница Amara Resort & Spa">
-                </a>
+                <img class="hotel-card-image" src="images/catalog/amara-resort-spa.jpeg" width="300" height="211" alt="Гостиница Amara Resort & Spa">
+                <h3 class="hotel-card-title heading-small">Amara Resort & Spa</h3>
                 <dl class="hotel-card-type-price">
                   <dt class="hotel-type">Гостиница</dt>
                   <dd class="hotel-price">От 4000 ₽</dd>
                 </dl>
                 <a class="button-link hotel-card-detail" href="#">подробнее</a>
                 <button class="button favorite">в избранное</button>
-                <span class="hotel-rating-stars visually-hidden">Рейтинг в звездах - 4 звезды</span>
+                <span class="hotel-rating-stars">4 звезды</span>
                 <p class="hotel-card-rating">Рейтинг: 8,5</p>
               </div>
             </li>
             <li class="hotel-card">
               <div class="hotel-card-content">
-                <a class="hotel-card-link">
-                  <h3 class="heading-small">Villas at Poco Diablo</h3>
-                  <img class="hotel-card-image" src="images/catalog/villas-at-poco-diablo.jpeg" width="300" height="211" alt="Гостиница Villas at Poco Diablo">
-                </a>
+                <img class="hotel-card-image" src="images/catalog/villas-at-poco-diablo.jpeg" width="300" height="211" alt="Гостиница Villas at Poco Diablo">
+                <h3 class="hotel-card-title heading-small">Villas at Poco Diablo</h3>
                 <dl class="hotel-card-type-price">
                   <dt class="hotel-type">Гостиница</dt>
                   <dd class="hotel-price">От 5000 ₽</dd>
                 </dl>
                 <a class="button-link hotel-card-detail" href="#">подробнее</a>
                 <button class="button favorite add">в избранном</button>
-                <span class="hotel-rating-stars visually-hidden">Рейтинг в звездах - 4 звезды</span>
+                <span class="hotel-rating-stars">4 звезды</span>
                 <p class="hotel-card-rating">Рейтинг: 9,2</p>
               </div>
             </li>
             <li class="hotel-card">
               <div class="hotel-card-content">
-                <a class="hotel-card-link">
-                  <h3 class="heading-small">Desert Quail Inn</h3>
-                  <img class="hotel-card-image" src="images/catalog/desert-quail-inn.jpeg" width="300" height="211" alt="Гостиница Desert Quail Inn">
-                </a>
+                <img class="hotel-card-image" src="images/catalog/desert-quail-inn.jpeg" width="300" height="211" alt="Гостиница Desert Quail Inn">
+                <h3 class="hotel-card-title heading-small">Desert Quail Inn</h3>
                 <dl class="hotel-card-type-price">
                   <dt class="hotel-type">Гостиница</dt>
                   <dd class="hotel-price">От 2500 ₽</dd>
                 </dl>
                 <a class="button-link hotel-card-detail" href="#">подробнее</a>
                 <button class="button favorite">в избранное</button>
-                <span class="hotel-rating-stars visually-hidden">Рейтинг в звездах - 3 звезды</span>
+                <span class="hotel-rating-stars">3 звезды</span>
                 <p class="hotel-card-rating">Рейтинг: 6,9</p>
               </div>
             </li>
             <li class="hotel-card">
               <div class="hotel-card-content">
-                <a class="hotel-card-link">
-                  <h3 class="heading-small">GreenTree Inn</h3>
-                  <img class="hotel-card-image" src="images/catalog/greentree-inn.jpeg" width="300" height="211" alt="Гостиница GreenTree Inn">
-                </a>
+                <img class="hotel-card-image" src="images/catalog/greentree-inn.jpeg" width="300" height="211" alt="Гостиница GreenTree Inn">
+                <h3 class="hotel-card-title heading-small">GreenTree Inn</h3>
                 <dl class="hotel-card-type-price">
                   <dt class="hotel-type">Гостиница</dt>
                   <dd class="hotel-price">От 1500 ₽</dd>
                 </dl>
                 <a class="button-link hotel-card-detail" href="#">подробнее</a>
                 <button class="button favorite">в избранное</button>
-                <span class="hotel-rating-stars visually-hidden">Рейтинг в звездах - 2 звезды</span>
+                <span class="hotel-rating-stars">2 звезды</span>
                 <p class="hotel-card-rating">Рейтинг: 5,0</p>
               </div>
             </li>
