Добавлен декор на страницу каталога

--- a/catalog.html
+++ b/catalog.html
@@ -41,9 +41,7 @@
           </li>
           <li class="user-item">
             <a class="user-link" href="#">
-              <span class="visually-hidden">Избранное содержит</span>
-              <span>12</span>
-              <span class="visually-hidden">гостиниц</span>
+              <span class="visually-hidden">Избранное содержит 12 гостиниц</span>
             </a>
           </li>
           <li class="user-item">
@@ -63,13 +61,13 @@
             <h1 class="main-inner-title heading-big">Гостиницы Седоны</h1>
 
             <!--ХЛЕБНЫЕ КРОШКИ-->
-            <ol class="breadcrumps">
-              <li class="braedcrumps-item">
+            <ol class="breadcrumps-list">
+              <li class="breadcrumps-item">
                 <a class="breadcrumps-link house-link" href="index.html">
                   <span class="visually-hidden">Главная</span>
                 </a>
               </li>
-              <li class="braedcrumps-item">
+              <li class="breadcrumps-item">
                 <a class="breadcrumps-link">Гостиницы</a>
               </li>
             </ol>
