--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
           </li>
           <li class="user-item">
             <a class="user-link" href="#">
-              <span class="visually-hidden">Избранное содержит</span>
-              <span>12</span>
-              <span class="visually-hidden">гостиниц</span>
+              <span class="visually-hidden">Избранное содержит 12 гостиниц</span>
             </a>
           </li>
           <li class="user-item">
@@ -75,31 +73,37 @@
         <ol class="advantages-main-list">
           <li class="advantages-main-item blue-block">
             <div class="blue-block-main">
-              <div class="blue-block-text">
+              <div class="advantage-container-big">
                 <h3 class="heading-small">Настоящий<br>городок</h3>
                 <p class="advantages-number">— №1 —</p>
                 <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
               <img class="blue-block-image-end" src="images/advantage-1.jpeg" width="800" height="384" alt="Улица в Седоне">
             </div>
-            <ul class="blue-block-sub advantages-sub-list">
+            <ul class="advantages-sub-list blue-block-sub">
               <li class="advantages-sub-item white-blue-block">
-                <h4 class="heading-small">Жильё</h4>
-                <p class="advantages-description">Рекомендуем пожить<br>в настоящем мотеле,<br>всё как в кино!</p>
+                <div class="advantage-container-sub icon-housing">
+                  <h4 class="heading-small">Жильё</h4>
+                  <p class="advantages-description">Рекомендуем пожить<br>в настоящем мотеле,<br>всё как в кино!</p>
+                </div>
               </li>
               <li class="advantages-sub-item">
-                <h4 class="heading-small">Еда</h4>
-                <p class="advantages-description">Всегда заказывайте<br>топовый фирменный бургер, вы не разочаруетесь!</p>
+                <div class="advantage-container-sub icon-food">
+                  <h4 class="heading-small">Еда</h4>
+                  <p class="advantages-description">Всегда заказывайте<br>топовый фирменный бургер, вы не разочаруетесь!</p>
+                </div>
               </li>
               <li class="advantages-sub-item white-blue-block">
-                <h4 class="heading-small">Сувениры</h4>
-                <p class="advantages-description">Не только китайского,<br>но и настоящего местного производства!</p>
+                <div class="advantage-container-sub icon-souvenirs">
+                  <h4 class="heading-small">Сувениры</h4>
+                  <p class="advantages-description">Не только китайского,<br>но и настоящего местного производства!</p>
+                </div>
               </li>
             </ul>
           </li>
           <li class="advantages-main-item blue-block">
             <div class="blue-block-main">
-              <div class="blue-block-text">
+              <div class="advantage-container-big">
                 <h3 class="heading-small">Там есть <br>мост дьявола</h3>
                 <p class="advantages-number">— №2 —</p>
                 <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
@@ -108,19 +112,25 @@
             </div>
           </li>
           <li class="advantages-main-item white-blue-block">
-            <h3 class="heading-small">Небольшая<br>площадь</h3>
-            <p class="advantages-number">— №3 —</p>
-            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+            <div class="advantage-container">
+              <h3 class="heading-small">Небольшая<br>площадь</h3>
+              <p class="advantages-number">— №3 —</p>
+              <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+            </div>
           </li>
           <li class="advantages-main-item grey-blue-block">
-            <h3 class="heading-small">Красивая<br>дорога</h3>
-            <p class="advantages-number">— №4 —</p>
-            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <div class="advantage-container">
+              <h3 class="heading-small">Красивая<br>дорога</h3>
+              <p class="advantages-number">— №4 —</p>
+              <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </div>
           </li>
           <li class="advantages-main-item white-blue-block">
-            <h3 class="heading-small">Мало<br>туристов</h3>
-            <p class="advantages-number">— №5 —</p>
-            <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+            <div class="advantage-container">
+              <h3 class="heading-small">Мало<br>туристов</h3>
+              <p class="advantages-number">— №5 —</p>
+              <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+            </div>
           </li>
         </ol>
       </section>
