--- a/catalog.html
+++ b/catalog.html
@@ -132,10 +132,10 @@
                 <fieldset class="catalog-filter-group group-price">
                   <legend class="catalog-filter-title">Стоимость, ₽:</legend>
                   <div class="price-form">
-                    <label for="control-input-price-from" class="visually-hidden">Стоимость от</label>
-                    <input class="input-price price-from" type="number" name="price-from" id="control-input-price-from" min="0" placeholder="0 от">
-                    <label for="control-input-price-to" class="visually-hidden">Стоимость до</label>
-                    <input class="input-price price-to" type="number" name="price-to" id="control-input-price-to" max="9000" placeholder="9000 до">
+                    <label class="visually-hidden" for="price-from">Стоимость от</label>
+                    <input class="input-price price-from" type="number" name="price-from" id="price-from" min="0" placeholder="0">
+                    <label class="visually-hidden" for="price-to">Стоимость до</label>
+                    <input class="input-price price-to" type="number" name="price-to" id="price-to" max="9000" placeholder="9000">
                   </div>
                   <p class="slider">
                     <span class="slider-price-from visually-hidden">Cтоимость от</span>
